@@ -8,6 +8,7 @@ GOGET=$(GOCMD) get
 DIST_DIR=dist
 LINUX_DIR=linux
 MACOS_DIR=macos
+MACOS_ARM64_DIR=macos-arm64
 WINDOWS_DIR=windows-x64
 WINDOWS_32BIT_DIR=windows-x32
 DIST_LINUX_DIR=$(NAME)-$(VERSION)-$(LINUX_DIR)
@@ -40,6 +41,10 @@ build-macos:
 	mkdir -p $(DIST_DIR)/$(MACOS_DIR)
 	GOOS=darwin GOARCH=amd64 CGO_ENABLED=0 $(GOBUILD) -ldflags "-X main.version=$(VERSION)" -o $(DIST_DIR)/$(MACOS_DIR)/$(NAME)
 
+build-macos-arm64:
+	mkdir -p $(DIST_DIR)/$(MACOS_ARM64_DIR)
+	GOOS=darwin GOARCH=arm64 CGO_ENABLED=0 $(GOBUILD) -ldflags "-X main.version=$(VERSION)" -o $(DIST_DIR)/$(MACOS_ARM64_DIR)/$(NAME)
+
 build-windows:
 	mkdir -p $(DIST_DIR)/$(WINDOWS_DIR)
 	GOOS=windows GOARCH=amd64 CGO_ENABLED=0 $(GOBUILD) -ldflags "-X main.version=$(VERSION)" -o $(DIST_DIR)/$(WINDOWS_DIR)/$(NAME).exe
@@ -49,7 +54,7 @@ build-windows-32bit:
 	GOOS=windows GOARCH=386 CGO_ENABLED=0 $(GOBUILD) -ldflags "-X main.version=$(VERSION)" -o $(DIST_DIR)/$(WINDOWS_32BIT_DIR)/$(NAME).exe
 
 .PHONY: dist
-dist: deps build
+dist-multiplatform: deps build
 	cd $(DIST_DIR) && \
 	mv $(LINUX_DIR) $(DIST_LINUX_DIR) && \
 	cp -p ../LICENSE.txt $(DIST_LINUX_DIR)/ && \
@@ -65,7 +70,6 @@ dist: deps build
 	cp -p ../NOTICE.txt $(DIST_MACOS_DIR)/ && \
 	cp -p ../README.md $(DIST_MACOS_DIR)/ && \
 	cp -p ../release-notes.txt $(DIST_MACOS_DIR)/ && \
-	zip -r $(DIST_MACOS_DIR).zip $(DIST_MACOS_DIR) && \
 	cd ..
 
 	cd $(DIST_DIR) && \
@@ -85,3 +89,16 @@ dist: deps build
 	cp -p ../release-notes.txt $(DIST_WINDOWS_32BIT_DIR)/ && \
 	zip -r $(DIST_WINDOWS_32BIT_DIR).zip $(DIST_WINDOWS_32BIT_DIR) && \
 	cd ..
+
+ifeq ($(shell uname),Darwin)
+dist: dist-multiplatform build-macos-arm64
+	cd $(DIST_DIR) && \
+	mv $(DIST_MACOS_DIR)/$(NAME) $(DIST_MACOS_DIR)/$(NAME).tmp && \
+	lipo -create $(DIST_MACOS_DIR)/$(NAME).tmp $(MACOS_ARM64_DIR)/$(NAME) -output $(DIST_MACOS_DIR)/$(NAME) && \
+	rm -f $(MACOS_ARM64_DIR)/$(NAME) && \
+	rmdir $(MACOS_ARM64_DIR) && \
+	rm -f $(DIST_MACOS_DIR)/$(NAME).tmp && \
+	cd ..
+else
+dist: dist-multiplatform
+endif
