@@ -3,6 +3,7 @@ fmcsadmin
 This software is distributed under the MIT License, see LICENSE.txt and NOTICE.txt for more information.
 
 Version: 1.3.0 (in development)
+- Support Apple Silicon on macOS.
 - Built with Go 1.16.
 
 Version: 1.2.0
